# piGameCreator

./: .gitignore  Makefile  OPStesting.cpp  README  README.TXT  Settings.xls  cpptarget.cpp  pgc.xls  pi-engine.xls  piGameCreator.pro
baseide/: Makefile  Makefile.Debug  Makefile.Release  Makefile.baseide  Makefile.baseide.Debug  Makefile.baseide.Release  UNUSED_gameframeworkclassdef.cpp  UNUSED_gameframeworkclassdef.ui  baseide.pro  buildtargets.cpp  buildtargets.h  buildtargets.ui  campaign.psd  class-eventbased-editor.pro  classwindow.ui  codeeditor - Copy.cpp  codeeditor - Copy.h  codeeditor - Stable.cpp  codeeditor.cpp  gcide.cpp  (+83 more)
cppengine/: CMakeLists.txt  CPPengine.files  Makefile  Makefile.Debug  Makefile.Release  application.h  cmakelists.template.txt  cppengine.pro  function.h  game.cpp  gcArray.cpp  gcArray.h  gcObject.cpp  gcString.cpp  gcString.h  gcmanaged.h  geometryShader.cpp  geometryShader.h  globals.cpp  graph.h  iManaged.cpp  map.cpp  map.h  object_script.cppengine.Debug  object_script.cppengine.Release  path.h  pgframework.h  point2d.cpp  point2d.h  point3d.cpp  qmake.cppengine.pro.template  qmake.cppengine.pro.template.txt  recover.bat  scene.cpp  timer.cpp  variant.cpp  variant.h
cppengine/private-stable-source/: exception.cpp  game.cpp  gcObject.h  gcString.h  globals.cpp  globals.h  graphicsEffect.cpp  lightVolume.cpp  lightVolume.h  object.cpp  objectRepresentation.cpp  objectRepresentation.h  pgframework.h  physicsSimulator.h  pixelShader.h  point.h  point3d.h  sceneGraph.cpp  sceneGraph.h  transition.h  vertexShader.cpp  window.cpp  window.h
(+2069 files in other folders)
